--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@job/common": "1.0.0",
-    "@nivo/core": "^0.67.0",
     "@nivo/bar": "^0.67.0",
+    "@nivo/core": "^0.67.0",
     "@nivo/line": "^0.67.0",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
@@ -36,25 +36,25 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@testing-library/dom": "^7.28.1",
+    "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/user-event": "^12.6.0",
     "@types/brainhubeu__react-carousel": "^2.0.2",
     "@types/classnames": "^2.2.11",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.18",
+    "@types/jest": "^26.0.19",
     "@types/jsdom": "^16.2.5",
     "@types/jwt-decode": "^3.1.0",
     "@types/lodash.isequal": "^4.5.5",
     "@types/moxios": "^0.4.9",
-    "@types/node": "^14.14.11",
+    "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-bootstrap-table-next": "^4.0.10",
     "@types/react-bootstrap-table2-filter": "^1.3.0",
@@ -63,11 +63,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-phone-number-input": "^3.0.6",
-    "@types/react-redux": "^7.1.11",
+    "@types/react-redux": "^7.1.12",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/react-select": "^3.0.27",
-    "@types/react-timeago": "^4.1.1",
+    "@types/react-select": "^3.0.28",
+    "@types/react-timeago": "^4.1.2",
     "@types/reselect": "^2.2.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -80,15 +80,17 @@
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "moxios": "^0.4.0",
-    "react-app-rewire-alias": "^0.1.8",
-    "react-app-rewired": "^2.1.7",
-    "typescript": "^4.1.2"
+    "react-app-rewire-alias": "^0.1.9",
+    "react-app-rewired": "^2.1.8",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "serve": "serve -l 3000 -s build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "NODE_ENV=test react-app-rewired test --env=jest-environment-jsdom-sixteen --verbose --collectCoverage",
+    "test:coverage": "yarn test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "lint:ts:fix": "eslint . --ext .ts,.tsx --fix",
     "format:write": "prettier --write . --ignore-path ../../.prettierignore"
@@ -107,5 +109,33 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "globals": {
+      "babel-jest": {
+        "tsConfig": "tsconfig.paths.json",
+        "diagnostics": true
+      },
+      "NODE_ENV": "test"
+    },
+    "transform": {
+      "^.+\\.tsx?$": "babel-jest"
+    },
+    "collectCoverageFrom": [
+      "!src/serviceWorker.ts",
+      "!src/index.tsx",
+      "!src/routes/**",
+      "!src/library/axios.ts",
+      "!src/redux/types/**"
+    ],
+    "setupFilesAfterEnv": ["<rootDir>src/setupTests.ts"],
+    "testPathIgnorePatterns": ["/node_modules/", "__mocks__"],
+
+    "transformIgnorePatterns": ["/node_modules/"],
+    "testMatch": ["**/src/**/*.test.{ts,tsx}"],
+    "moduleNameMapper": {
+      "\\.(css|jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>src/__tests__/__mocks__/fileMock.ts"
+    }
   }
 }
