--- a/packages/frontend/.babelrc
+++ b/packages/frontend/.babelrc
@@ -30,6 +30,10 @@
             "rootPathPrefix": "@components/"
           },
           {
+            "rootPathSuffix": "./src/containers",
+            "rootPathPrefix": "@containers/"
+          },
+          {
             "rootPathSuffix": "./src/redux/reducers",
             "rootPathPrefix": "@reducers/"
           },
