--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "checkJs": true,
     "jsx": "react",
@@ -18,8 +22,18 @@
     "resolveJsonModule": true,
     "useDefineForClassFields": true,
     "isolatedModules": true,
-    "types": ["jest", "node", "@types/jest"]
+    "types": [
+      "jest",
+      "node",
+      "@types/jest"
+    ]
   },
-  "include": ["src/**/*", "src/__tests__/*"],
-  "exclude": ["node_modules", "public"]
+  "include": [
+    "src/**/*",
+    "src/__tests__/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "public"
+  ]
 }
