--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-useless-constructor": "off",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-redeclare": "off",
     "import/no-unresolved": 0,
     "import/order": 0,
     "import/extensions": 0,
