--- a/packages/frontend/.babelrc
+++ b/packages/frontend/.babelrc
@@ -52,7 +52,7 @@
   "env": {
     "production": {
       "plugins": [
-        ["react-remove-properties", {"properties": ["data-test"]}]
+        ["react-remove-properties", {"properties": ["data-test", "data-test-id"]}]
       ]
     },
     "test": {
