--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,11 +14,14 @@
     "build": "yarn build:types && yarn build:js && yarn copy-static-assets",
     "build:types": "tsc -p tsconfig.prod.json --emitDeclarationOnly",
     "build:js": "babel src --out-dir dist --extensions \".ts\"",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --runInBand",
+    "test:migrate": "NODE_ENV=test yarn migrate && jest --runInBand",
     "test:coverage": "yarn test --coverage --detectOpenHandles",
+    "test:coverage:migrate": "yarn test:migrate --coverage --detectOpenHandles",
     "copy-static-assets": "ts-node copyStatic.ts",
     "lint:ts:fix": "eslint . --ext .ts --fix",
-    "format:write": "prettier --write . --ignore-path ../../.prettierignore"
+    "format:write": "prettier --write . --ignore-path ../../.prettierignore",
+    "migrate": "yarn build:js && node dist/migrations/index.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -48,17 +51,18 @@
     "@types/pug": "^2.0.4",
     "@types/redis": "^2.8.28",
     "@types/shelljs": "^0.8.8",
+    "@types/supertest": "^2.0.10",
     "@types/yauzl": "^2.9.1",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "babel-plugin-root-import": "^6.6.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "concurrently": "^5.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "shelljs": "0.8.4",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.0",
     "ts-node": "9.1.1"
-  },
-  "repository": {
-    "url": "https://github.com/halcika7/JobWeb"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.7.0",
@@ -90,5 +94,41 @@
     "reflect-metadata": "^0.1.13",
     "winston": "^3.3.3",
     "yauzl": "^2.10.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": true,
+    "setupFilesAfterEnv": ["./jest.setup.js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "collectCoverage": true,
+    "testMatch": [
+      "**/*.spec.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!src/migrations/**",
+      "!src/services/Document.ts",
+      "!src/services/Passport.ts",
+      "!src/services/Email.ts",
+      "!src/services/Redis.ts",
+      "!src/services/Upload.ts",
+      "!src/services/User.ts",
+      "!src/services/File.ts",
+      "!src/services/Order.ts",
+      "!src/configs/**",
+      "!src/models/**",
+      "!src/public/**",
+      "!src/utils/**",
+      "!src/inversify/**",
+      "!src/app.ts",
+      "!src/backend.types.ts",
+      "!src/server.ts"
+    ]
   }
 }
