--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,13 +30,15 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "tsconfig-paths": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/cypress": "^7.0.3",
     "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -73,7 +75,9 @@
     "history": "^5.0.0",
     "jest": "^26.6.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-watch-typeahead": "^0.6.1",
     "moxios": "^0.4.0",
+    "react-app-rewire-alias": "^0.2.0",
     "react-app-rewired": "^2.1.8",
     "typescript": "^4.1.3",
     "web-vitals": "^1.0.1",
