--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -98,7 +98,9 @@
   "jest": {
     "testEnvironment": "node",
     "verbose": true,
-    "setupFilesAfterEnv": ["./jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
