prepare for deployment

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build": "lerna run build --scope={@job/backend,@job/frontend,@job/common}",
     "test": "lerna run test --scope={@job/frontend}",
     "server": "yarn --cwd packages/backend watch",
-    "server-prod": "yarn --cwd packages/backend start",
+    "start": "yarn --cwd packages/backend start",
     "frontend": "yarn --cwd packages/frontend start",
     "frontend-prod": "yarn --cwd packages/frontend start",
     "dev": "concurrently \"yarn server\" \"yarn frontend\"",
-    "prod": "concurrently \"yarn server-prod\" \"yarn frontend-prod\"",
+    "prod": "concurrently \"yarn start\" \"yarn frontend-prod\"",
     "lerna:lint:ts": "lerna run lint:ts:fix",
     "lint": "yarn --cwd packages/backend lint:ts:fix; yarn --cwd packages/frontend lint:ts:fix; yarn --cwd packages/common lint:ts:fix",
     "format": "yarn --cwd packages/backend format:write; yarn --cwd packages/frontend format:write; yarn --cwd packages/common format:write",
