--- a/netlify.toml
+++ b/netlify.toml
@@ -10,8 +10,9 @@
     CONTEXT = "production"
 
 [context.production.environment]
+    SKIP_PREFLIGHT_CHECK = "true"
     GENERATE_SOURCEMAP = "false"
-    REACT_APP_BACKEND_URL = "some url"
+    REACT_APP_BACKEND_URL = "https://print-shop-api.herokuapp.com/api"
 
 [[redirects]]
   from = "/*"
