--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,7 +6,7 @@
   "main": "dist/server.js",
   "private": true,
   "scripts": {
-    "start": "yarn build && yarn serve",
+    "start": "yarn serve",
     "serve": "node dist/server.js",
     "serve:dev": "nodemon dist/server.js",
     "watch": "yarn dirs && concurrently \"yarn build:js --watch\" \"yarn serve:dev\"",
