prepare for deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "packages/frontend/"
+  base = ""
 
-  publish = "build/"
+  publish = "packages/frontend/build/"
 
   command = "yarn build"
 
