--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -95,7 +95,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && mv build ../backend",
     "serve": "serve -l 3000 -s build",
     "test": "NODE_ENV=test react-app-rewired test --env=jest-environment-jsdom-sixteen --verbose --collectCoverage",
     "test:coverage": "yarn test --coverage --watchAll=false",
