--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BACKEND_URL=http://localhost:5000/api
+GENERATE_SOURCEMAP=false
+REACT_APP_BACKEND_URL=https://print-shop-api.herokuapp.com/api
