--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
 GENERATE_SOURCEMAP=false
-REACT_APP_BACKEND_URL=https://print-shop-api.herokuapp.com/api
+REACT_APP_BACKEND_URL=http://localhost:5000/api
