--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "@nivo/line": "^0.67.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "downloadjs": "^1.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-bootstrap-table-next": "^4.0.3",
@@ -43,6 +44,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "@types/classnames": "^2.2.11",
+    "@types/downloadjs": "^1.4.2",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.20",
