--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,22 +8,24 @@
   "scripts": {
     "start": "yarn serve",
     "serve": "node dist/server.js",
-    "serve:dev": "nodemon dist/server.js",
-    "watch": "yarn dirs && concurrently \"yarn build:js --watch\" \"yarn serve:dev\"",
+    "serve:dev": "nodemon src/server.ts",
+    "watch": "yarn serve:dev",
     "dirs": "rimraf dist && mkdirp dist && yarn copy-static-assets",
     "build": "yarn build:types && yarn build:js && yarn copy-static-assets",
     "build:types": "tsc -p tsconfig.prod.json --emitDeclarationOnly",
     "build:js": "babel src --out-dir dist --extensions \".ts\"",
     "test": "NODE_ENV=test jest --runInBand",
-    "test:migrate": "NODE_ENV=test yarn migrate && jest --runInBand",
+    "test:migrate": "NODE_ENV=test yarn migrate && yarn test",
     "test:coverage": "yarn test --coverage --detectOpenHandles",
-    "test:coverage:migrate": "NODE_ENV=test yarn migrate && jest --runInBand --coverage --detectOpenHandles",
+    "test:coverage:migrate": "NODE_ENV=test yarn migrate && yarn test --coverage --detectOpenHandles",
     "copy-static-assets": "ts-node copyStatic.ts",
     "lint:ts:fix": "eslint . --ext .ts --fix",
     "format:write": "prettier --write . --ignore-path ../../.prettierignore",
-    "migrate": "yarn build:js && node dist/migrations/index.js"
+    "migrate": "babel-node --extensions \".ts\" src/db/migrations/index.ts",
+    "seed": "babel-node --extensions \".ts\" src/db/seeder/index.ts"
   },
   "devDependencies": {
+    "@babel/node": "^7.13.0",
     "@types/compression": "^1.7.0",
     "@types/connect-redis": "^0.0.16",
     "@types/cookie-parser": "^1.4.2",
@@ -114,7 +116,7 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{ts,js}",
-      "!src/migrations/**",
+      "!src/db/**",
       "!src/services/Document.ts",
       "!src/services/Passport.ts",
       "!src/services/Email.ts",
@@ -124,7 +126,6 @@
       "!src/services/File.ts",
       "!src/services/Order.ts",
       "!src/configs/**",
-      "!src/models/**",
       "!src/public/**",
       "!src/utils/**",
       "!src/inversify/**",
